--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -2,13 +2,14 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  background-color: blueviolet;
+  background-color: rgb(153 204 204);
   height: 100%;
 }
 
 .header {
   background-color: #282c34;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
