--- a/src/components/Playlist/Playlist.module.css
+++ b/src/components/Playlist/Playlist.module.css
@@ -1,3 +1,43 @@
 .Playlist {
-  margin-top: 10px;
+  display: block;
+  overflow: hidden;
+}
+
+.PlaylistName {
+  display: flex;
+  border-style: solid;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom-width: 2px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+
+  input {
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+    border-width: 0;
+    width: 100%;
+    font-size: calc(10px + 1.5vmin);
+    padding: 0;
+  }
+
+  h2 {
+    margin: 0;
+  }
+
+  input::placeholder {
+    color: white;
+  }
+
+  input:focus {
+    background-color: rgba(0, 0, 0, 0.25);
+  }
+
+  input:focus-visible {
+    outline: none;
+  }
 }
