--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -1,3 +1,19 @@
 h2 {
   color:aliceblue;
+  font-size: calc(10px + 1.5vmin);
+  margin: 0;
+}
+
+.subhead {
+  display: flex;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0.83em;
+  margin-bottom: 0.83em;
+  border-style: solid;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom-width: 2px;
+  border-color:  rgba(0, 0, 0, 0);
 }
