--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -12,8 +12,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.header h1 {
+  font-size: calc(10px + 2vmin);
 }
 
 .wrapper {
