--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,6 +12,23 @@ code {
     monospace;
 }
 
-html, body, div#root {
+html,
+body {
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  background-color: rgb(153 204 204);
+}
+
+div#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  flex: 1 0 auto;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
