--- a/src/components/Track/Track.module.css
+++ b/src/components/Track/Track.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  color:aliceblue;
+  color: aliceblue;
   border: 2px solid;
   border-color: black;
   margin: 5px;
@@ -32,6 +32,7 @@
     background-color: transparent;
     font-size: 1.5em;
     font-weight: bold;
+    padding: 10px;
   }
 
   button:hover {
@@ -42,5 +43,4 @@
   button:active {
     font-size: 1em;
   }
-
 }
