Add "prev" and "next" buttons to search results

--- a/src/components/Playlist/Playlist.module.css
+++ b/src/components/Playlist/Playlist.module.css
@@ -1,6 +1,11 @@
 .Playlist {
   display: block;
   overflow: hidden;
+  text-align: center;
+}
+
+.SaveButton {
+  padding: 0.5em;
 }
 
 .PlaylistName {
@@ -31,6 +36,7 @@
 
   input::placeholder {
     color: white;
+    opacity: 0.5;
   }
 
   input:focus {
