--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,3 +1,7 @@
 .SearchBar {
-  margin: 5px;
+  margin-left: 7%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 40%;
+  text-align: center;
 }
