--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -16,4 +16,19 @@ h2 {
   border-right: none;
   border-bottom-width: 2px;
   border-color: rgba(0, 0, 0, 0);
+  justify-content: space-between;
+}
+
+.navButtons {
+  button {
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: calc(10px + 1.5vmin);
+    border: 0px;
+    background-color: transparent;
+    font-weight: bold;
+  }
+  button:enabled {
+    color: white;
+  }
 }
