--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -23,13 +22,14 @@
 
 .ResultsWrapper {
   display: flex;
+  justify-content: space-evenly;
   height: 100%;
 }
 
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   min-height: auto;
   flex: 1 0 auto;
 }
@@ -41,4 +41,15 @@
   justify-content: space-around;
   width: 100%;
   height: 2.5rem;
+}
+
+input[type='submit']:hover:enabled,
+button:hover:enabled {
+  cursor: pointer;
+  color: grey;
+}
+
+input[type='submit']:active:enabled,
+button:active:enabled {
+  font-size: 1em;
 }
