--- a/src/containers/LoginContainer/LoginContainer.module.css
+++ b/src/containers/LoginContainer/LoginContainer.module.css
@@ -1,10 +1,5 @@
-button,
-p {
-  font-size: calc(10px + 0.25vmin);
-  margin: 0;
-}
-
 .login {
+  font-family: 'Fredoka', sans-serif;
   font-weight: bold;
   display: flex;
   flex-direction: column;
@@ -12,4 +7,9 @@ p {
   justify-content: space-evenly;
   color: white;
   padding: 10px;
+
+  p {
+    font-size: 12pt;
+    margin: 0;
+  }
 }
