--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -1,40 +1,30 @@
-h2 {
-  color: aliceblue;
-  font-size: calc(10px + 1.5vmin);
-  margin: 0;
-}
-
-.subhead {
+.ResultsSubhead {
   display: flex;
   margin-left: 5px;
   margin-right: 5px;
   margin-top: 0.83em;
-  margin-bottom: 0.83em;
-  border-style: solid;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom-width: 2px;
-  border-color: rgba(0, 0, 0, 0);
   justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+
+  h2 {
+    font-family: 'Oleo Script Swash Caps', system-ui;
+    color: hsl(44, 85%, 97%);
+    font-size: 24pt;
+    font-weight: 300;
+    height: 35px;
+    border: none;
+    margin: 0;
+    transform: translateY(-2px);
+  }
 }
 
 .navButtons {
   button {
     margin-left: 5px;
     margin-right: 5px;
-    font-size: calc(10px + 1.5vmin);
-    border: 0px;
+    font-size: 1.75em;
     background-color: transparent;
     font-weight: bold;
-  }
-  button:enabled {
-    color: white;
-    text-shadow:
-      1px 1px 2px black,
-      1px 1px 0.3em black;
-  }
-  button:active:enabled {
-    font-size: 1em;
   }
 }
