--- a/src/containers/MainContainer/MainContainer.module.css
+++ b/src/containers/MainContainer/MainContainer.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   min-height: auto;
   flex: 1 0 auto;
-  font-family: 'Days One', sans-serif;
+  font-family: 'Afacad', sans-serif;
 }
 
 .ResultsWrapper {
