--- a/src/components/Playlist/Playlist.module.css
+++ b/src/components/Playlist/Playlist.module.css
@@ -1,6 +1,4 @@
 .Playlist {
-  /* display: block; */
-  /* overflow: hidden; */
   text-align: center;
 }
 
@@ -17,6 +15,7 @@
     color: black;
     font-size: 24pt;
     font-weight: bold;
+    width: 100%;
     height: 35px;
     border: none;
     margin: 0;
