--- a/src/components/SearchErrorMessage/SearchErrorMessage.module.css
+++ b/src/components/SearchErrorMessage/SearchErrorMessage.module.css
@@ -1,3 +1,9 @@
 .searchErrorMessage {
-  color: aliceblue;
+  color: hsl(0, 70%, 23%);
+  display: flex;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 0.83em;
+  align-items: center;
+  justify-content: center;
 }
