--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -1,30 +1,3 @@
-.ResultsSubhead {
-  display: flex;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 0.83em;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: center;
-
-  h2 {
-    font-family: 'Oleo Script Swash Caps', system-ui;
-    color: hsl(44, 85%, 97%);
-    font-size: 24pt;
-    font-weight: 300;
-    height: 35px;
-    border: none;
-    margin: 0;
-    transform: translateY(-2px);
-  }
-}
-
-.navButtons {
-  button {
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 1.75em;
-    background-color: transparent;
-    font-weight: bold;
-  }
+.SearchResults {
+  text-align: center;
 }
