--- a/src/components/Track/Track.module.css
+++ b/src/components/Track/Track.module.css
@@ -17,10 +17,12 @@
 }
 
 .TrackInfo {
+  font-family: 'Afacad', sans-serif;
   text-align: center;
   outline: none;
   margin: 1em;
-  padding: 0.75em;
+  padding-top: 0.75em;
+  padding-bottom: 0.75em;
   transition: color 0.2s;
   flex-basis: 75%;
   flex-grow: 0;
@@ -33,19 +35,29 @@
     /* outer HL */ hsla(0, 0%, 100%, 0.4) 2px 3px 3px 7px,
     /* outer HL */ hsla(0, 0%, 100%, 0.9) 0 1px 2px 2px,
     /*inner SD*/ hsla(39, 66%, 13%, 0.4) 3px 3px 7px inset;
-  p {
-    margin: 0;
-    font-size: 1em;
-    padding: 0.25em;
-    line-height: 1.5em;
-  }
 }
 
 .trackName {
-  padding-top: 0.75em;
-  padding-bottom: 0.5em;
-  margin: 0;
+  margin-top: 0.75em;
+  margin-bottom: 0.5em;
+  margin-left: 0.75em;
+  margin-right: 0.75em;
   text-transform: uppercase;
+  h4 {
+    margin-block: 0;
+  }
+}
+
+.albumName {
+  margin-top: 0.5em;
+  margin-bottom: 0.75em;
+  margin-left: 0.75em;
+  margin-right: 0.75em;
+  p {
+    margin: 0;
+    margin-block: 0;
+    padding: 0;
+  }
 }
 
 .artistContainer {
@@ -53,6 +65,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .Artist {
@@ -64,6 +77,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  p {
+    margin: 0;
+    margin-block: 0;
+    padding: 0;
+  }
 }
 
 .leftArrow {
