--- a/src/containers/MainContainer/MainContainer.module.css
+++ b/src/containers/MainContainer/MainContainer.module.css
@@ -9,7 +9,7 @@
 .ResultsWrapper {
   display: flex;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
   padding-top: 30px;
 }
 
@@ -28,7 +28,6 @@
 }
 
 .colLeft {
-  height: 100%;
   margin-right: 1%;
   flex-basis: 45%;
   flex-grow: 0;
@@ -36,7 +35,6 @@
 }
 
 .colRight {
-  height: 100%;
   margin-left: 1%;
   flex-basis: 45%;
   flex-grow: 0;
